Creating new design

--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -61,12 +61,14 @@ body{
 }
 
 .body {
-    background: url('/src/assets/cutout.png');
-    background-color: var(--custom-bg-1);
+    background: url('/src/assets/cutout.png') no-repeat;
+    background-size: cover;
+    background-position-x: right;
+    background-position-y: top;
 }
 
 .glass-morphism {
-    backdrop-filter: blur(5px);
+    backdrop-filter: blur(2px) brightness(.8);
     background: rgba(244, 244, 244, 0.3);
 }
 
@@ -77,4 +79,16 @@ body{
 
 .html5-qrcode-anchor-scan-type-change{
     display: none !important;
+}
+
+/* New */
+.home_img{
+    background-image: url(./assets/home.jpg);
+    background-repeat: no-repeat;
+    background-position:right;
+    background-size: cover;
+    background-position-x: center;
+}
+.backdrop{
+    backdrop-filter: blur(4px) brightness(0.8);
 }
