--- a/Backend/templates/viewsample.html
+++ b/Backend/templates/viewsample.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sample Histories</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css" integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css"
+        integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <style>
     .dataTables_filter,
@@ -21,9 +25,9 @@
         border: 1px solid white !important;
         color: white !important;
     }
-    
+
     tbody tr td {
-        vertical-align:middle;
+        vertical-align: middle;
         font-size: small !important;
         border: 1px solid lightgray !important;
         white-space: nowrap;
@@ -31,26 +35,50 @@
         text-overflow: ellipsis;
     }
 </style>
+
 <body>
-    {{samples}}
     <div class="container-fluid">
         <div class="row vh-100">
-            <div class="col-1 border p-0 px-1">
-                <a href="#" class="btn btn-secondary d-inline-block my-3">&LeftArrow;Dashboard</a>
+            <div class="col text-center col-md-1 border p-0 px-1 d-none d-md-block">
+                <a href="/sample-histories/" class="nav-link d-inline-block my-3 d-none d-md-block">&LeftArrow; Back</a>
             </div>
-            <div class="col-11 p-2">
-                <table id="InquiryTable" class="table table-bordered table-stripped">
-                    <col style="width:45%;">
-                    <col style="width:55%;">
-                    <col style="width:5%;">
-                    <thead>
-                        <tr class="bg-secondary text-white">
-                            <th class="fw-normal" scope="col">Origin</th>
-                            <th class="fw-normal" scope="col">Destination</th>
-                            <th scope="col"></th>
-                        </tr>
-                    </thead>
-                </table>
+            <div class="col col-md-11 p-2">
+                <a href="/sample-histories/" class="nav-link d-inline-block my-3 d-inline d-md-none float-end">&LeftArrow; Back</a>
+                <h4 class="lh-lg">View Sample History</h4>
+                <div class="container-fluid">
+                    <div class="row row-cols-1 row-cols-md-2 w-100 m-0">
+                        <div class="col table-responsive">
+                            <h4> Origin </h4>
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr class="bg-secondary">
+                                        <th>Sample No</th>
+                                        <th>Origin</th>
+                                        <th>Collect Date</th>
+                                        <th>Collector User</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="origin">
+                                </tbody>
+                            </table>
+                        </div>
+                        <div class="col table-responsive">
+                            <h4> Destination </h4>
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr class="bg-secondary">
+                                        <th>Destination</th>
+                                        <th>Drop of Date</th>
+                                        <th>Reciever Id</th>
+                                        <th>Reciever User</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="destination">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -65,25 +93,34 @@
     integrity="sha512-BkpSL20WETFylMrcirBahHfSnY++H2O1W+UnEEO4yNIl+jI2+zowyoGJpbtk6bx97fBXf++WJHSSK2MV4ghPcg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script>
-    let InqTable = $('#InquiryTable').DataTable({
-        lengthMenu: [[10, 25, 50, -1], [10, 25, 50, 'All']],
-    });
     $.ajax({
-        url: "/sample-histories-api",
+        url: "/sample-histories-api?id=" + {{ sample_id }},
         dataType: 'json',
         success: function (data) {
-            var rows = [];
-            var btn = "<a class='btn btn-success' href="">&RightArrow;</a>"
-            $.each(data, function (index, row) {
-                rows.push([
-                    row.destination.destination,
-                    row.destination.drop_of_date,
-                    row.destination.reciever_id,
-                    row.destination.reciever_user,
-                    btn
-                ]);
+            var destinationtable = document.getElementById('destination');
+            var tabledata = '';
+            $.each(data[0].destination, function (index, row) {
+                tabledata += "<tr>"
+                tabledata += "<td>" + row.destination + "</td>"
+                tabledata += "<td>" + row.drop_of_date + "</td>"
+                tabledata += "<td>" + row.reciever_id + "</td>"
+                tabledata += "<td>" + row.reciever_user + "</td>"
+                tabledata += "</tr>"
             });
-            InqTable.rows.add(rows).draw();
+            destinationtable.innerHTML = tabledata;
+            
+            var origintable = document.getElementById('origin');
+            var origindata = '';
+            $.each(data[0].origin, function (index, row) {
+                origindata += "<tr>"
+                origindata += "<td>"+ data[0].sample_no+"</td>"
+                origindata += "<td>" + row.origin + "</td>"
+                origindata += "<td>" + row.collect_date + "</td>"
+                origindata += "<td>" + row.collector_user + "</td>"
+                origindata += "</tr>"
+            });
+            console.log(origindata)
+            origintable.innerHTML = origindata;
         }
     });
 </script>
