--- a/Backend/templates/sample.html
+++ b/Backend/templates/sample.html
@@ -39,7 +39,7 @@
             </div>
             <div class="col col-md-11 p-2">
                 <a href="/admin/" class="nav-link d-inline-block my-3 d-inline d-md-none float-end">&LeftArrow; Back</a>
-                <h4 class="lh-lg">Sample</h4>
+                <h4 class="lh-lg">Samples</h4>
                 <table id="InquiryTable" class="table table-bordered table-stripped">
                     <col style="width:45%;">
                     <col style="width:55%;">
