--- a/Backend/templates/viewsample.html
+++ b/Backend/templates/viewsample.html
@@ -44,7 +44,7 @@
             </div>
             <div class="col col-md-11 p-2">
                 <a href="/sample-histories/" class="nav-link d-inline-block my-3 d-inline d-md-none float-end">&LeftArrow; Back</a>
-                <h4 class="lh-lg">View Sample History</h4>
+                <h4 class="lh-lg">View Sample Historys</h4>
                 <div class="container-fluid">
                     <div class="row row-cols-1 row-cols-md-2 w-100 m-0">
                         <div class="col table-responsive">
