--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://use.fontawesome.com/releases/v6.4.0/css/all.css");
 * {
     padding: 0;
     margin: 0;
@@ -90,4 +91,31 @@ body{
 }
 .backdrop{
     backdrop-filter: blur(4px) brightness(0.8);
+}
+
+#reader video{
+    width: 100%;
+    /* height: auto; */
+}
+
+.drawingBuffer{
+    display: none;
+}
+
+#reader::after{
+    content: '\f25a  hold here to scan';
+    font-family: "Font Awesome 6 Free";
+    letter-spacing: 2px;
+    width: 50%;
+    border-radius: 50px;
+    display: block;
+    position: absolute;
+    bottom: 45%;
+    left: 50%;
+    transform: translate(-50%,-50px);
+    text-align: center;
+    background: #2e2d2d99;
+    color: white;
+    padding: 2% 0%;
+    font-size: 10px;
 }
