--- a/Frontend/src/style.css
+++ b/Frontend/src/style.css
@@ -102,7 +102,7 @@ body{
     display: none;
 }
 
-#reader::after{
+/* #reader::after{
     content: '\f25a  hold here to scan';
     font-family: "Font Awesome 6 Free";
     letter-spacing: 2px;
@@ -118,4 +118,4 @@ body{
     color: white;
     padding: 2% 0%;
     font-size: 10px;
-}
+} */
